Add talk details

--- a/_posts/2022-07-18-8th-meetup.md
+++ b/_posts/2022-07-18-8th-meetup.md
@@ -4,6 +4,16 @@ date: 2022-08-18 21:00:00 IRST
 categories: meetup 
 location: google-meet
 talks:
+  - title: "Embedded Development Using Rust - Part 1"
+    abstract: ""
+    speaker:
+      name: "Pejman "
+      github: p3zhy
+      twitter: p3zhy
+  - title: "Embedded Development Using Rust - Part 2"
+    abstract: ""
+    speaker:
+      name: "Farbod Peyman Zadeh"
 ---
 
 <!-- ## Recording
