Add 8th meetup recording links

--- a/_posts/2022-07-18-8th-meetup.md
+++ b/_posts/2022-07-18-8th-meetup.md
@@ -16,10 +16,8 @@ talks:
       name: "Farbod Peyman Zadeh"
 ---
 
-<!-- ## Recording
-You can watch recording on [Youtube]() or [Aparat]()
--->
-
+## Recording
+You can watch recording on [Youtube](https://youtu.be/EBsVAf_5ybk) or [Aparat](https://www.aparat.com/v/6k08A)
 
 ## Event
 
