Translate and make RTL

--- a/_posts/2022-07-18-8th-meetup.md
+++ b/_posts/2022-07-18-8th-meetup.md
@@ -1,34 +1,18 @@
 ---
-title: "Rust Iran Meetup #8 - Embedded Development Using Rust"
+title: "جلسه ۸‌ام - توسعه برنامه های توکار (Embedded)"
 date: 2022-08-18 21:00:00 IRST
 categories: meetup 
-location: google-meet
+location: gharar
+video: https://youtu.be/EBsVAf_5ybk
 talks:
-  - title: "Embedded Development Using Rust - Part 1"
+  - title: "توسعه برنامه های توکار"
     abstract: ""
     speaker:
-      name: "Pejman "
+      name: "پژمان قندهاری"
       github: p3zhy
       twitter: p3zhy
-  - title: "Embedded Development Using Rust - Part 2"
+  - title: "ادامه توسعه برنامه های توکار"
     abstract: ""
     speaker:
-      name: "Farbod Peyman Zadeh"
+      name: "فربد پیمان‌زاده"
 ---
-
-## Recording
-You can watch recording on [Youtube](https://youtu.be/EBsVAf_5ybk) or [Aparat](https://www.aparat.com/v/6k08A)
-
-## Event
-
-This is the 8th Rust Iran meetup and it's online due to the Covid-19
-pandemic.
-
-Bring your ideas, questions & projects:
-- What did you work on this week?
-- What problems did you solve this week with Rust?
-- Are you just learning Rust and want some topic explained?
-- Found an interesting crate you want to talk about?
-
-Want to present something in the next meetup? mail me at kaveh at
-riseup.net, we would be so happy to have you in the meetup.
