--- a/_posts/2022-09-12-9th-meetup.md
+++ b/_posts/2022-09-12-9th-meetup.md
@@ -1,26 +1,13 @@
 ---
-title: "Rust Iran Meetup #9 - Let's Write An Async Executor"
+title: "جلسه ۹‌ام - برنامه نویسی Async"
 date: 2023-04-06 21:00:00 IRST
 categories: meetup 
 location: gharar
 talks:
-  - title: "Let's Write An Async Executor"
+  - title: "بیایید یک رانتایم Async بنویسیم"
     abstract: ""
     speaker:
-      name: "Sahand"
+      name: "سهند"
       github: sahandevs
 ---
 
-<!--## Recording
-You can watch recording on [Youtube](https://youtu.be/EBsVAf_5ybk) or [Aparat](https://www.aparat.com/v/6k08A)
--->
-
-## Event
-Bring your ideas, questions & projects:
-- What did you work on this week?
-- What problems did you solve this week with Rust?
-- Are you just learning Rust and want some topic explained?
-- Found an interesting crate you want to talk about?
-
-Want to present something in the next meetup? mail me at kaveh at
-riseup.net, we would be so happy to have you in the meetup.
