--- a/_posts/2023-05-11-10th-meetup.md
+++ b/_posts/2023-05-11-10th-meetup.md
@@ -4,6 +4,6 @@ date: 2023-05-18 21:00:00 IRST
 categories: meetup 
 location: gharar
 links:
- برنامه‌ریزی: aa
+ برنامه‌ریزی: https://github.com/rust-meetup/rust-meetup.github.io/issues/11
 ---
 
