--- a/_posts/2022-09-12-9th-meetup.md
+++ b/_posts/2022-09-12-9th-meetup.md
@@ -3,6 +3,7 @@ title: "جلسه ۹‌ام - برنامه نویسی Async"
 date: 2023-04-06 21:00:00 +03:30
 categories: meetup 
 location: gharar
+video: https://www.youtube.com/watch?v=FaUCAF_Tb80
 talks:
   - title: "بیایید یک رانتایم Async بنویسیم"
     abstract: ""
