--- a/_posts/2023-05-11-10th-meetup.md
+++ b/_posts/2023-05-11-10th-meetup.md
@@ -5,5 +5,6 @@ categories: meetup
 location: gharar
 links:
  برنامه‌ریزی: https://github.com/rust-meetup/rust-meetup.github.io/issues/11
+video: https://youtu.be/PrP6ZE0DTs4
 ---
 
