--- a/_posts/2023-06-08-11th-meetup.md
+++ b/_posts/2023-06-08-11th-meetup.md
@@ -4,5 +4,6 @@ date: 2023-06-15 21:00:00 +03:30
 categories: meetup 
 location: gharar
 links:
+ برنامه‌ریزی: https://github.com/rust-meetup/rust-meetup.github.io/issues/18
 ---
 
