--- a/_posts/2023-06-08-12th-meetup.md
+++ b/_posts/2023-06-08-12th-meetup.md
@@ -5,5 +5,11 @@ categories: meetup
 location: gharar
 links:
  برنامه‌ریزی: https://github.com/rust-meetup/rust-meetup.github.io/issues/19
+talks:
+- title: "Borrow Checker for non-rust developers"
+  speaker:
+    name: "سهند"
+    github: sahandevs
+  abstract: در این ارائه با دلیل وجود و نحوه عملکرد borrow checker آشنا میشیم.
 ---
 
